[package]
name = "eloop-revenue-db"
description = "Utility to manage the revenue from ELOOP.one"
authors = ["Maximilian Schönenberg <schoenenberg@users.noreply.github.com>"]
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
diesel = { version = "1" , features = ["chrono", "sqlite"]}
diesel_migrations = "1"
clap = "2"
log = "0.4.14"
env_logger = "0.9.0"
dirs = "4.0.0"

[profile.release]
lto = "fat"